create new end point to retrieve all user by field name (using regex)
